# fitness

./: CMakeLists.txt  README.md  recommendations.txt  users.txt  users2.txt
src/: CMakeLists.txt  main.c  test.c  user.c  user.h  user_input.c  workoutrecommendations.c  workoutrecommendations.h
test/: CMakeLists.txt  test.c  test_adjust_recommendation.c  test_calculate_id.c  test_display_recommendation.c  test_load_user.c  test_returning_user.c  test_save_user.c  test_update_user_files.c  user.c  workoutrecommendations.c
